# xsecure

./: Dockerfile  README.md  __init__.py  baseline.py  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py  environment.py
